css/app.css
.wrapper {
  width: 100%; }

body {
  width: 100% !important;
  min-width: 100%;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  margin: 0;
  Margin: 0;
  padding: 0;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

img {
  outline: none;
  text-decoration: none;
  -ms-interpolation-mode: bicubic;
  width: auto;
  max-width: 100%;
  clear: both;
  display: block; }

center {
  width: 100%;
  min-width: 700px; }

table {
  border-spacing: 0;
  border-collapse: collapse; }

td, th {
  word-wrap: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
  border-collapse: collapse !important; }

table, tr, td, th {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  vertical-align: top;
  text-align: left; }

@media only screen {
  html {
    min-height: 100%;
    background: #f3f3f3; } }

table.body {
  background: #f3f3f3;
  height: 100%;
  width: 100%; }

table.container {
  background: #fefefe;
  width: 700px;
  margin: 0 auto;
  Margin: 0 auto;
  text-align: inherit; }

table.row {
  padding: 0;
  width: 100%;
  position: relative; }

table.spacer {
  width: 100%; }
  table.spacer td {
    mso-line-height-rule: exactly; }

table.container table.row {
  display: table; }

th.columns {
  margin: 0 auto;
  Margin: 0 auto;
  padding-left: 16px;
  padding-bottom: 0; }

th.columns.last {
  padding-right: 16px; }

th.columns table {
  width: 100%; }
  th.columns table.button {
    width: auto; }

th.large-3 {
  width: 159px;
  padding-left: 8px;
  padding-right: 8px; }

th.large-3.first {
  padding-left: 16px; }

th.large-3.last {
  padding-right: 16px; }

th.large-4 {
  width: 217.33333px;
  padding-left: 8px;
  padding-right: 8px; }

th.large-4.first {
  padding-left: 16px; }

th.large-6 {
  width: 334px;
  padding-left: 8px;
  padding-right: 8px; }

th.large-6.first {
  padding-left: 16px; }

th.large-6.last {
  padding-right: 16px; }

.collapse > tbody > tr > th.large-6 {
  padding-right: 0;
  padding-left: 0;
  width: 350px; }

.collapse th.large-6.first,
.collapse th.large-6.last {
  width: 358px; }

th.large-8 {
  width: 450.66667px;
  padding-left: 8px;
  padding-right: 8px; }

th.large-8.last {
  padding-right: 16px; }

th.large-12 {
  width: 684px;
  padding-left: 8px;
  padding-right: 8px; }

th.large-12.first {
  padding-left: 16px; }

th.large-12.last {
  padding-right: 16px; }

th.expander {
  visibility: hidden;
  width: 0;
  padding: 0 !important; }

p.text-right {
  text-align: right; }

table.float-center {
  margin: 0 auto;
  Margin: 0 auto;
  float: none;
  text-align: center; }

body,
table.body,
h2,
h3,
h5,
p,
td,
th {
  color: #0a0a0a;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: normal;
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin: 0;
  Margin: 0;
  text-align: left;
  line-height: 1.3; }

h2,
h3,
h5 {
  color: inherit;
  word-wrap: normal;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: normal;
  margin-bottom: 10px;
  Margin-bottom: 10px; }

h2 {
  font-size: 30px; }

h3 {
  font-size: 28px; }

h5 {
  font-size: 20px; }

body,
table.body,
p,
td,
th {
  font-size: 16px;
  line-height: 1.3; }

p {
  margin-bottom: 10px;
  Margin-bottom: 10px; }

a {
  color: #00569C;
  text-decoration: none;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: normal;
  padding: 0;
  text-align: left;
  line-height: 1.3; }
  a:hover {
    color: #003a69; }
  a:active {
    color: #003a69; }
  a:visited {
    color: #00569C; }

span.preheader {
  display: none !important;
  visibility: hidden;
  mso-hide: all !important;
  font-size: 1px;
  color: #f3f3f3;
  line-height: 1px;
  max-height: 0px;
  max-width: 0px;
  opacity: 0;
  overflow: hidden; }

table.button {
  width: auto;
  margin: 0 0 0 0;
  Margin: 0 0 0 0; }
  table.button table td {
    text-align: left;
    color: #fefefe;
    background: #00B290;
    border: 2px solid #00B290; }
    table.button table td a {
      font-family: Helvetica, Arial, sans-serif;
      font-size: 16px;
      font-weight: bold;
      color: #fefefe;
      text-decoration: none;
      text-align: left;
      display: inline-block;
      padding: 8px 16px 8px 16px;
      border: 0 solid #00B290;
      border-radius: 3px; }
  table.button.radius table td {
    border-radius: 3px;
    border: none; }

table.button:hover table tr td a,
table.button:active table tr td a,
table.button table tr td a:visited {
  color: #fefefe; }

table.button.tiny table td {
  padding: 4px 8px 4px 8px; }

table.button:hover table td,
table.button:visited table td,
table.button:active table td {
  background: #007f67;
  color: #fefefe; }

table.button:hover table a,
table.button:visited table a,
table.button:active table a {
  border: 0 solid #007f67; }

@media only screen and (max-width: 716px) {
  table.body img {
    width: auto;
    height: auto; }
  table.body center {
    min-width: 0 !important; }
  table.body .container {
    width: 95% !important; }
  table.body .columns {
    height: auto !important;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding-left: 16px !important;
    padding-right: 16px !important; }
  table.body .collapse .columns {
    padding-left: 0 !important;
    padding-right: 0 !important; }
  th.small-6 {
    display: inline-block !important;
    width: 50% !important; }
  th.small-12 {
    display: inline-block !important;
    width: 100% !important; } }

body,
html,
.body {
  background: #f3f3f3 !important; }

span, p, h2, h3, h5 {
  font-family: 'Open Sans', sans-serif !important; }

h2, h3, h5 {
  font-weight: bold; }

h2 {
  font-size: 25px;
  color: #00569C; }

p, span {
  font-size: 15px;
  line-height: 22px; }

.header {
  background: #8a8a8a; }

.header .columns {
  padding-bottom: 0; }

.header p {
  color: #fff;
  padding-top: 15px; }

.header {
  padding: 20px; }

.header .container {
  background: transparent; }

table.button.facebook table td {
  background: #3B5998 !important;
  border-color: #3B5998; }

table.button.twitter table td {
  background: #1daced !important;
  border-color: #1daced; }

table.button.google table td {
  background: #DB4A39 !important;
  border-color: #DB4A39; }

table.button.vk table td {
  background: #467FC2 !important;
  border-color: #467FC2; }

table.button.email table td {
  background: #005CF1 !important;
  border-color: #005CF1; }

table.button.ok table td {
  background: #FF9C22 !important;
  border-color: #FF9C22; }

table.button.telegram table td {
  background: #2da4dc !important;
  border-color: #2da4dc; }

table.button.instagram table td {
  background: #9835B1 !important;
  border-color: #9835B1; }

table.button.go-website.radius {
  margin: 65px 0;
  background-color: #00569C !important; }

.navigation {
  background: #00569C; }

.navigation p {
  color: #ffff;
  font-size: 20px;
  font-weight: 600;
  line-height: 22px;
  width: 65%;
  margin: 26px 15px; }

.logo {
  text-align: center; }

.logo img {
  display: block;
  margin: auto;
  margin: 50px; }

.navigation p, .go-website {
  display: inline-block; }

.main {
  background: #fff; }

p.main-text {
  text-align: center;
  font-style: italic;
  font-weight: 700;
  font-size: 14px;
  margin: 60px 40px !important; }

.suggestion-text {
  line-height: 22px;
  background-color: #F6F7FA; }
  .suggestion-text h2 {
    padding: 35px 40px 20px 40px !important; }
  .suggestion-text p, .suggestion-text h5 {
    line-height: 22px;
    padding-left: 40px !important;
    padding-right: 40px !important;
    text-align: justify; }
  .suggestion-text p.pd {
    padding-bottom: 35px !important; }

.suggestion-text,
.advantage-text,
.advantage-list,
.warning,
.footer-inner {
  width: 97% !important; }

.advantage-text,
.advantage-list,
.warning {
  margin-top: 50px; }

.advantage-text h2 {
  padding: 0 70px 30px 70px !important; }

.advantage-list h2 {
  padding-bottom: 14px;
  padding-left: 40px;
  margin-bottom: 0 !important; }

.advantage-list ul {
  padding-left: 50px !important; }

li.list-item {
  list-style: circle; }

.icons {
  width: 200px !important;
  border: 2px solid #F6F7FA; }
  .icons img {
    height: 68px;
    width: auto;
    margin: 20px auto 15px auto; }
  .icons img.img-others {
    height: 30px;
    margin: 38px auto; }
  .icons p {
    font-size: 18px;
    text-align: center;
    padding: 0 15px !important; }

.spacer,
.header {
  display: none !important; }

.icons {
  height: 195px !important;
  margin-bottom: 25px; }

.suggestion-text .wrapper-inner {
  display: none; }

.warning h3, .warning p {
  color: #FA7429;
  text-align: center; }

.warning h3 {
  font-size: 18px !important;
  font-weight: bold; }

.warning p {
  margin-bottom: 70px !important; }

.footer {
  background: #F6F7FA;
  margin-bottom: 0 !important; }
  .footer img {
    margin: 35px auto 19px auto; }
  .footer .ul {
    text-align: center;
    line-height: 25px;
    padding-inline-start: 0px !important; }
    .footer .ul .li {
      font-weight: 600;
      list-style: none; }
  .footer .icon-btn {
    display: inline; }
  .footer th.social-media.small-12.large-12.columns.first.last {
    padding-left: 200px;
    padding-right: 200px;
    padding-top: 18px; }
  .footer .social-media {
    text-align: center; }
    .footer .social-media .button {
      margin: auto; }
      .footer .social-media .button img {
        height: 24px;
        width: 24px;
        margin: 10px !important; }
  .footer .footer-text p {
    font-size: 13px;
    width: 70%;
    text-align: center !important;
    margin: auto; }
  .footer .footer-text p.pt {
    padding-top: 20px !important; }
  .footer .footer-text p:first-of-type {
    margin: 30px auto 0 !important; }

.button.primary.radius {
  margin: auto !important; }
  .button.primary.radius a {
    background-color: #00569C; }

table.button.facebook.icon-btn.tiny.radius,
table.button.vk.icon-btn.tiny.radius,
table.button.email.icon-btn.tiny.radius,
table.button.google.icon-btn.tiny.radius,
table.button.twitter.icon-btn.tiny.radius,
table.button.ok.icon-btn.tiny.radius,
table.button.telegram.icon-btn.tiny.radius {
  margin-right: 5px !important; }

.dots {
  display: block;
  color: #00569C;
  padding: 0 0 15px 40px; }

span.dots :hover {
  cursor: pointer; }

.more {
  display: none; }

@media only screen and (max-width: 430px) {
  .logo img {
    margin: 65px !important; }
  .navigation p {
    width: 100% !important;
    text-align: center !important;
    margin-left: 0 !important;
    margin-right: 0 !important; }
  table.button.go-website.radius {
    margin: 30px 73px !important; } }

